# almostapt-cli

./: README.md  pyproject.toml
almostaptcli/: almostaptcli.py
