[tool.poetry]
name = "almostaptcli"
version = "0.1.0"
description = ""
authors = ["Mike R <cr8syoki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
pymongo = "^3.12.0"
rich = "^10.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
